# vllm-qwen2.5-coder-tool-parser

./: README.md  main.py  pyproject.toml  qwen2_5_coder_tool_parser.py  test_template.py
fixtures/: test_cases.yaml  test_tools.yaml
results/: README.md
results/integration_explicit/: qwen2.5-coder-14b.json  qwen2.5-coder-32b-awq.json  qwen2.5-coder-7b.json
results/integration_minimal/: qwen2.5-coder-14b.json  qwen2.5-coder-32b-awq.json  qwen2.5-coder-7b.json
results/integration_template/: qwen2.5-coder-14b.json  qwen2.5-coder-32b-awq.json  qwen2.5-coder-7b.json
results/integration_verbose/: qwen2.5-coder-14b.json  qwen2.5-coder-32b-awq.json  qwen2.5-coder-7b.json
results/output_format/: qwen2.5-coder-14b.json  qwen2.5-coder-32b-awq.json  qwen2.5-coder-7b.json  qwen3-8b.json  qwen3-coder-30b-a3b-awq.json
tests/: test_output_format.py  test_parser_unit.py  test_parser_vllm_integration.py
